--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -7,7 +7,7 @@ $level0MobileDisplay: flex;
    z-index: 998;
    height: 67px;
    width: 105%!important;
-   margin: 0 (($space-xl - (14/(16*1.1)))*-1)!important; 
+   margin: 0 (($space-xl - (14/(16*1.1)))*-1)!important;
 
    &:hover {
       box-shadow: 0px 2px 1px -1px rgba(79, 91, 100, 0.2);
@@ -88,6 +88,7 @@ nav.cmp-navigation {
                   display: block;
                   position: absolute;
                   left: $space-xs;
+                  top: 18px;
                }
       
                & > .arrow.right{
